--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-ios-appattest": "^0.10.0"
