--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.3",
+    "@types/uuid": "^9.0.8",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-ios-appattest": "^0.10.0"
+    "react-native-ios-appattest": "^0.10.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
