--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/uuid": "^9.0.8",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-get-random-values": "^1.10.0",
     "react-native-ios-appattest": "^0.10.0",
     "uuid": "^9.0.1"
   },
